# SnowFight

./: .clang-format  .gitignore  Base.hpp  CMakeLists.txt  Matrix.cpp  Matrix.hpp  README.md  Vector3.cpp  Vector3.hpp  main.cpp
SnowFight/: SnowFight.sln  SnowFight.vcxproj  SnowFight.vcxproj.filters  Source.cpp
SnowFight/Debug/: SnowFight.ilk  vc142.idb
SnowFight/Debug/SnowFight.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SnowFight.lastbuildstate
SnowFight/Header/: loadShader.h
SnowFight/Shader/: Source.frag  Source.vert
SnowFight/SnowFight/: SnowFight.vcxproj  SnowFight.vcxproj.filters
SnowFight/SnowFight/Debug/: vc142.idb
SnowFight/SnowFight/Debug/SnowFight.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SnowFight.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
SnowFight/x64/Debug/: vc142.idb
SnowFight/x64/Debug/SnowFight.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SnowFight.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
dll-def/: Matrix.def  Vector3.def
include/: Base.hpp  LoadResources.hpp  LoadShader.hpp  LoadTexture.hpp  Matrix.hpp  Object.hpp  Player.hpp  Shape.hpp  ShapeIndex.hpp  SnowBall.hpp  Vector.hpp  Window.hpp
resources/: normal.frag  normal.vert  texture.frag  texture.vert
src/: LoadResources.cpp  LoadShader.cpp  LoadTexture.cpp  Matrix.cpp  Object.cpp  Player.cpp  Vector.cpp  Window.cpp
