cmake_minimum_required(VERSION 3.10)
project(GLTest CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY obj)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY obj)
if(MSVC)
    string(REPLACE "/W3" "" CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W4 /EHsc")
    set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG}")
    set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE}")
	set(GLFW_GLEW_libraries_dirs C:/ CACHE STRING description)
	set(GLFW_GLEW_include_dirs C:/ CACHE STRING description)
	link_directories(${GLFW_GLEW_libraries_dirs})
	include_directories(${GLFW_GLEW_include_dirs})
	include_directories(include)
	add_definitions(-DGLEW_STATIC)
else()
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
    set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -O0 -g3")
    set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O2")
	Find_Package(PkgConfig REQUIRED)
	pkg_search_module(GLFW REQUIRED glfw3)
	Find_Package(GLEW REQUIRED)
	Find_Package(OpenGL REQUIRED)
endif()

add_library(Object STATIC src/Object.cpp)
add_library(Window STATIC src/Window.cpp)
add_library(Matrix STATIC src/Matrix.cpp)
add_library(LoadShader STATIC src/LoadShader.cpp)
add_executable(GLTest main.cpp .clang-format)

if(MSVC)
	#target_link_libraries(GLTest opengl32)
	#target_link_libraries(GLTest libglew32d)
	#target_link_libraries(GLTest glfw3)
	target_link_libraries(Object opengl32)
	target_link_libraries(Object libglew32d)
	target_link_libraries(Object glfw3)
else()
	target_link_libraries(GLTest ${OPENGL_LIBRARY})
	target_link_libraries(GLTest ${GLEW_LIBRARIES})
	target_link_libraries(GLTest ${GLFW_LIBRARIES})
	target_link_libraries(Object ${OPENGL_LIBRARY})
	target_link_libraries(Object ${GLEW_LIBRARIES})
	target_link_libraries(Object ${GLFW_LIBRARIES})
	target_link_libraries(Vertex ${OPENGL_LIBRARY})
	target_link_libraries(Vertex ${GLEW_LIBRARIES})
	target_link_libraries(Vertex ${GLFW_LIBRARIES})
endif()
target_link_libraries(GLTest Object)
target_link_libraries(GLTest Window)
target_link_libraries(GLTest Matrix)
target_link_libraries(GLTest LoadShader)
file(GLOB RESOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/resources/*)
file(COPY ${RESOURCE_FILES} DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/../resources)